<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robomaster_s1_tvvf_navigation</name>
  <version>1.0.0</version>
  <description>TVVF-based navigation and waypoint following system for RoboMaster S1 robot with Livox LiDAR</description>
  <maintainer email="shigeikuo@gmail.com">ikuo</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <depend>yaml-cpp</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>map_scan_manager</exec_depend>
  <exec_depend>emcl2</exec_depend>
  <exec_depend>obstacle_tracker</exec_depend>
  <exec_depend>tvvf_vo_c</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
